create hocr document from image

--- a/chrome/locale/en-US/browser-overlay.dtd
+++ b/chrome/locale/en-US/browser-overlay.dtd
@@ -1,2 +1,3 @@
 <!ENTITY editThisDocument.label "Edit this hOCR document">
+<!ENTITY editThisImage.label "Create hOCR document from this image">
 <!ENTITY launchEditor.label "Launch standalone hOCR editor...">
