--- a/chrome/locale/en-US/editor.properties
+++ b/chrome/locale/en-US/editor.properties
@@ -2,3 +2,4 @@ savedSuccessfully=Saved Successfully
 savingDocument=Saving hOCR Document
 paragraphBreakTooltip=check to start a new paragraph here
 sameWordTooltip=check to remove the space between this line and the next
+pageN=Page %d
